--- a/.github/workflows/MaintainStructure.yml
+++ b/.github/workflows/MaintainStructure.yml
@@ -11,5 +11,5 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-        - name: Maintain or Create Dir Structure
-          uses: d33pster/python-project-structure@v3.3
+        - name: Maintain or Create Directory Structure
+          uses: d33pster/python-project-structure@v3.4
